--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,30 +1,11 @@
 stages:
-  - stage: continuosintegration
+  - stage: Continuous Integration
+    displayName: CI
     jobs:
-      - job: build
+      - job: buildjob
+        displayName: build
         steps:
           - script: dotnet restore
+            displayName: restore
           - script: dotnet build
-          - task: PublishBuildArtifacts@1
-            inputs:
-              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-              ArtifactName: 'drop'
-              publishLocation: 'Container'
-          
-  - stage: cd
-    jobs:
-      - job: deploy
-        steps:
-        - task: DownloadBuildArtifacts@1
-          inputs:
-            buildType: 'current'
-            downloadType: 'single'
-            artifactName: 'drop'
-            downloadPath: '$(System.ArtifactsDirectory)'
-        - task: AzureRmWebAppDeployment@4
-          inputs:
-            ConnectionType: 'AzureRM'
-            azureSubscription: 'Pay-As-You-Go(049cc0b9-2696-4e70-871b-4366be487c19)'
-            appType: 'webApp'
-            WebAppName: 'webapp378'
-            packageForLinux: '$(System.ArtifactsDirectory)/drop/*.zip'
+            displayName: build
